# hack_mcp

./: .env.example  .gitignore  CHAT_MIGRATION.md  CLAUDE.md  Dockerfile  MIGRATION_SUMMARY.md  PHASE4_COMPLETE.md  PHASE7_COMPLETE.md  README.md  README_MCP.md  capture.py  capture_foreground.py  capture_shortcut.sh  chat_bot.py  cli.py  database.py  demo.py  docker-compose.prod.yml  docker-compose.yml  hotkey_daemon.py  init_db.py  instant_capture.sh  llm_chat.py  mcp_server.py  models.py  pyproject.toml  quick_test.py  reliable_capture.sh  requirements-dev.txt  requirements.txt  screen-memory-assistant-detailed-plan.md  screen_api.py  screen_chat.py  screen_memory.json  setup.py  setup_db_direct.py  simple_capture.py  start.sh  start_mcp_chat.sh  start_mcp_system.sh  (+9 more)
database/: init.sql
docs/: API.md  CONFIG_GUIDE.md  DEVELOPER_SETUP.md  EXAMPLES.md  MCP_INTEGRATION.md  MCP_MIGRATION_GUIDE.md  README.md  UNIFIED_API_REFERENCE.md  UNIFIED_DEVELOPER_GUIDE.md  UNIFIED_USER_GUIDE.md  V0.2.0_UPDATE_SUMMARY.md  installation.md  memory_optimization.md  usage.md
docs/admin/: README.md
docs/api/: README.md  phase4-api.md
docs/deployment/: DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md
docs/developer/: README.md  architecture.md
docs/development/: CONTRIBUTING.md  PROGRESS_PLAN.md  README.md  REPOSITORY_STRUCTURE.md
docs/examples/: README.md  USAGE_EXAMPLES.md
docs/integration/: README.md
docs/migration/: README.md
docs/security/: README.md
docs/user/: README.md  installation.md  quick-start.md
docs/user-guide/: INSTALL.md  README.md
docs/user/features/: chat.md  monitoring.md
docs/video-guides/: README.md
eidolon/: __init__.py  __main__.py  cli.py  orchestrator.py
eidolon/assistants/: __init__.py  document_assistant.py  email_assistant.py  office_assistant.py
eidolon/cli/: __init__.py  chat.py  main.py
eidolon/config/: logging.yaml  memory_optimized.yaml  production-settings.yaml  settings-high-performance.yaml  settings.yaml
eidolon/core/: __init__.py  agent.py  analytics.py  analyzer.py  insights.py  interface.py  mcp_server.py  memory.py  observer.py  pipeline.py  query_processor.py  safety.py
eidolon/integrations/: fastmcp.py
eidolon/models/: __init__.py  cloud_api.py  decision_engine.py  local_vision.py
eidolon/monitoring/: __init__.py  dashboard.py  health_monitor.py
eidolon/orchestration/: __init__.py  ecosystem_orchestrator.py
eidolon/personality/: __init__.py  style_replicator.py
eidolon/planning/: __init__.py  dependency_analyzer.py  plan_executor.py  resource_manager.py  task_planner.py
eidolon/proactive/: __init__.py  pattern_recognizer.py  predictive_assistant.py  workflow_optimizer.py
eidolon/storage/: __init__.py  file_manager.py  metadata_db.py  vector_db.py
eidolon/tools/: __init__.py  base.py  communication.py  file_ops.py  registry.py  system_ops.py  web_ops.py  workflow.py
eidolon/twin/: __init__.py  digital_twin_engine.py
eidolon/updater/: __init__.py  backup_manager.py  update_manager.py  version_manager.py
eidolon/utils/: __init__.py  config.py  logging.py  memory_optimizer.py  monitoring.py  parallel_loader.py  production_monitor.py
examples/: openrouter_example.py
scripts/: benchmark-startup.sh  fast-start.sh  health_check.sh  install.sh  performance-comparison.md  start.sh
scripts/backup/: backup-manager.sh
scripts/monitoring/: start-monitoring.sh
scripts/onboarding/: setup-wizard.sh
scripts/privacy/: data-privacy-manager.sh
scripts/service/: setup-service.sh
tests/: README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  __init__.py  conftest.py  run_new_tests.py  test_cli.py  test_core.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_chat_integration.py  test_e2e_workflow.py  test_env_integration.py  test_mcp_integration.py
tests/phase/: __init__.py  test_phase1.py  test_phase1_updated.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
tests/unit/: __init__.py  test_analyzer.py  test_cloud_api.py  test_config.py  test_decision_engine.py  test_digital_twin_engine.py  test_ecosystem_orchestrator.py  test_enhanced_interface.py  test_file_manager.py  test_local_vision.py  test_mcp_server.py  test_memory.py  test_metadata_db.py  test_observer.py  test_vector_db.py
