[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidolon-ai"
version = "1.0.0"
description = "AI Personal Assistant with continuous screen monitoring and semantic search"
readme = "README.md"
authors = [
    {name = "Eidolon Team", email = "team@eidolon.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "timm>=0.9.2",
    "einops>=0.6.1",
    "safetensors>=0.3.1",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "streamlit>=1.25.0",
    "aiohttp>=3.8.5",
    "httpx>=0.24.1",
    "websockets>=11.0.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "aiosqlite>=0.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ujson>=5.8.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "keyboard>=0.13.5",
    "watchdog>=3.0.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "enrichmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
eidolon = "eidolon.cli:main"

[project.urls]
Homepage = "https://github.com/eidolon-ai/eidolon"
Repository = "https://github.com/eidolon-ai/eidolon"
Issues = "https://github.com/eidolon-ai/eidolon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eidolon*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
